Fix spacing issues in media queries width 500px.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -301,6 +301,7 @@ input[type=email] {
   font-family: Merriweather, Arial, sans-serif;
   letter-spacing: 1px;
   border-style: dotted;
+  color:#FFF;
   width: 300px;
   padding: 15px;
   background-color: #000;
@@ -317,7 +318,7 @@ input[type=submit] {
   margin-top: 20px;
   padding: 0.75rem;
   background-color: #FFF;
-  color: #000;
+  color:#000;
   border: none;
   border-radius: 5px;
   text-transform: uppercase;
@@ -379,6 +380,9 @@ footer {
   text-transform: uppercase;
   font-size: 10px;
 }
+
+
+
 
 
 @media only screen and (max-width: 1124px) {
@@ -647,7 +651,7 @@ footer {
 
 @media only screen and (max-width: 500px) {
   header {
-    height: 700px;
+    height: 630px;
     background-image: url('../images/home_500px.jpg');
     max-width: 500px;
   }
@@ -656,24 +660,29 @@ footer {
     display: none;
   }
 
+  #menu {
+    letter-spacing: 1px;
+    list-style-type: none;
+    font-size: 70%;
+  }
+
   nav li {
     margin-top: 30px;
     padding-left: 10px;
   }
 
   #text-logo {
-    font-size: 190%;
+    font-size: 170%;
     text-align: center;
-    margin-top: 550px;
+    margin-top: 500px;
   }
 
 
   #tour-page {
-    height: 500px;
+    height: 400px;
     max-width: 500px;
     background-color: #000;
     background-image: none;
-    overflow-x:scroll;
   }
 
   h2 {
@@ -686,11 +695,11 @@ footer {
     padding-top: 15vw;
     margin: auto;
     width: 90%;
-    overflow-x:scroll;
   }
 
   .dates {
     padding-top: 15px;
+    width: 100%;
   }
 
   table {
@@ -702,6 +711,7 @@ footer {
   tbody {
     display: flex;
     flex-direction: row;
+    margin-left: 60px;
   }
 
   tr {
@@ -718,7 +728,7 @@ footer {
   th {
     padding-left: 0px;
     text-align: left;
-    font-size: 25px;
+    font-size: 18px;
     text-decoration: none;
     width: 10px;
     margin-left: -120px;
@@ -731,27 +741,27 @@ footer {
   }
 
   #city {
-    margin: 0;
+    margin-left:-10px;
     padding: 0;
   }
 
   #city>td {
     text-align: left;
-    padding-left: 5px;
-    margin-top: 50px;
-    font-size: 10px;
+    padding-left: 0px;
+    margin-top: 40px;
+    font-size: 8px;
   }
 
   #venue>td {
     text-align: left;
     padding-left: 10px;
-    margin-top: 50px;
-    width: 100px;
-    font-size: 10px;
+    margin-top: 39.5px;
+    font-size: 8px;
+    width: 80px;
   }
 
   .button {
-    padding: 10px 0 0 0;
+    padding: 15px 0 0 0;
     width: 100%;
     margin: 0;
   }
@@ -776,9 +786,9 @@ footer {
   }
 
   .merch-container {
-    padding-top: 10vw;
+    padding-top: 15vw;
     margin: auto;
-    width: 90%;
+    width: 80%;
   }
 
   .flex-container {
@@ -793,8 +803,8 @@ footer {
 
   .container {
     position: relative;
-    width: 50%;
-    padding: 1px 30px;
+    width: 90%;
+    padding: 1px 10px;
     height: auto;
   }
 
@@ -804,7 +814,7 @@ footer {
 
 
   #about-page {
-    height: 900px;
+    height: 700px;
     max-width: 500px;
     background-color: #000;
     background-image: none;
@@ -818,13 +828,19 @@ footer {
   }
 
   .text-box {
-    width: 90%;
+    width: 100%;
     height: 700px;
+  }
+
+  h4{
+    padding:10px;
   }
 
   p {
     font-size: 15px;
-    padding: 5vw;
+    padding: 10px 0 0 0;
+    margin: auto;
+    text-align: left;
   }
 
 
